syntax = "proto3";

package chainML;

option java_package = "com.chainML.pb";
option java_multiple_files = true;

message UploadImageRequest {
  oneof data {
    ImageInfo info = 1;
    bytes chunk_data = 2;
  };
}

message UploadImageResponse {
  string id = 1;
  uint32 size = 2;
}

message DataChunk {
  bytes data = 1;
  int32 size = 2;
}

message ImageInfo {
  string image_type = 2;
}

message Model{
  string modelName = 1;
}

message DownloadFileRequest {
  string fileName = 1;
}

service chainMLService {
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {};
  rpc downloadFile (DownloadFileRequest) returns (stream DataChunk);
}